# PolyPortamento_source

./: CMakeLists.txt  README.md
resource/: PolyPortamento.uidesc  win32resource.aps
source/: PPcids.h  PPcontroller.cpp  PPcontroller.h  PPentry.cpp  PPparam.h  PPpitch.h  PPprocessor.cpp  PPprocessor.h  version.h
